--- a/package.json
+++ b/package.json
@@ -1,29 +1,9 @@
 {
-  "name": "techrish-group-chat",
+  "name": "chat-basics",
   "version": "0.0.1",
-  "description": "Chat application with group chat using registration and guest chat.",
+  "description": "Basic chat application with users and groups.",
   "dependencies": {
-						
-						"socket.io": "1.4.8",
-						"bcrypt-nodejs": "0.0.3",
-						"body-parser": "1.15.2",
-						"debug": "2.2.0",
-						"connect-flash": "0.1.1",
-						"cookie-parser": "1.4.3",
-						"express": "4.14.0",
-						"express-handlebars": "3.0.0",
-						"express-messages": "1.0.1",
-						"express-session": "1.14.0",
-						"express-validator": "2.20.8",
-						"express-myconnection": "1.0.4",
-						"morgan": "1.7.0",
-						"serve-favicon": "2.3.0",
-						"mysql": "2.11.1",
-						"passport": "0.3.2",
-						"passport-local": "1.0.0",
-						"passport.socketio" : "3.6.2",
-						"express-mysql-session" : "1.1.1",
-						"jade": "1.11.0"
-						
-				  }
+    "express": "4.14.0",
+    "socket.io": "1.4.8"
+  }
 }
